Use crosshair cursor hovering squares

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="container">
             <div id="grid"></div>
-            <div>
-                <button onclick="makeRow();">Make Grid</button>
+            <div id="starter">
+                <button id="starter-button" onclick="makeRow();">Make Grid</button>
             </div>
         </div>
     </body>
