Create mouseover colour functionality

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <body>
         <div id="container">
             <div id="starter">
-                <button class="but" id="starter-button" onclick="makeRow();">8-Bit</button>
-                <button class="but" id="starter-button" onclick="makeRow();">16-Bit</button>
-                <button class="but" id="starter-button" onclick="makeRow();">32-Bit</button>
-                <button class="but" id="starter-button" onclick="makeRow();">64-Bit</button>
+                <button id="starter-button" onclick="makeRow();">Start</button>
             </div>
         </div>
     </body>
